[gd_scene load_steps=17 format=2]

[ext_resource path="res://scenes/main_menu/main_menu.gd" type="Script" id=1]
[ext_resource path="res://assets/display/capture1 - blurred.png" type="Texture" id=2]
[ext_resource path="res://assets/display/fonts/font_theme_title.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/display/fonts/font_theme_tiny.tres" type="DynamicFont" id=4]
[ext_resource path="res://scenes/main_menu/viewport.gd" type="Script" id=6]
[ext_resource path="res://scenes/main_menu/music_volume.gd" type="Script" id=7]
[ext_resource path="res://scenes/main_menu/vehicle_volume.gd" type="Script" id=8]
[ext_resource path="res://scenes/main_menu/wind_speed.gd" type="Script" id=9]
[ext_resource path="res://assets/display/theme_big_button.tres" type="Theme" id=10]
[ext_resource path="res://assets/display/fonts/font_theme_menu.tres" type="DynamicFont" id=11]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="MainMenu" type="Control"]
pause_mode = 2
theme = ExtResource( 10 )
script = ExtResource( 1 )

[node name="ViewportContainer" type="ViewportContainer" parent="."]
visible = false
margin_left = 888.0
margin_top = 80.0
margin_right = 1088.0
margin_bottom = 280.0

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 200, 200 )
handle_input_locally = false
render_target_update_mode = 0
script = ExtResource( 6 )

[node name="MainSelection" type="Control" parent="."]
pause_mode = 2
anchor_right = 0.5
anchor_bottom = 0.6
margin_left = 120.0
margin_top = 80.0
margin_right = 120.0
margin_bottom = 80.0
mouse_filter = 2
theme = ExtResource( 10 )

[node name="BackgroundImage" type="TextureRect" parent="MainSelection"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -120.0
margin_top = -82.3784
margin_right = 1800.0
margin_bottom = 997.622
texture = ExtResource( 2 )
stretch_mode = 1

[node name="MainContainer" type="VBoxContainer" parent="MainSelection"]
anchor_bottom = 1.0
margin_right = 519.0
margin_bottom = 446.0
custom_constants/separation = 55

[node name="TitleContainer" type="VBoxContainer" parent="MainSelection/MainContainer"]
margin_right = 519.0
margin_bottom = 101.0
custom_constants/separation = 18

[node name="TitleText" type="Label" parent="MainSelection/MainContainer/TitleContainer"]
margin_right = 519.0
margin_bottom = 101.0
custom_fonts/font = ExtResource( 3 )
text = "Explosional!"
align = 1
valign = 1

[node name="ButtonsContainer" type="HBoxContainer" parent="MainSelection/MainContainer"]
margin_top = 156.0
margin_right = 519.0
margin_bottom = 403.0

[node name="HBoxContainer2" type="VBoxContainer" parent="MainSelection/MainContainer/ButtonsContainer"]
margin_right = 185.0
margin_bottom = 247.0
custom_constants/separation = 23

[node name="ResumeButton" type="Button" parent="MainSelection/MainContainer/ButtonsContainer/HBoxContainer2"]
margin_right = 185.0
margin_bottom = 31.0
theme = ExtResource( 10 )
custom_fonts/font = ExtResource( 11 )
text = "Resume"

[node name="StartButton" type="Button" parent="MainSelection/MainContainer/ButtonsContainer/HBoxContainer2"]
margin_top = 54.0
margin_right = 185.0
margin_bottom = 85.0
focus_neighbour_right = NodePath("../../../../../PlayerSelection/GridContainer/Player1SelectButton")
custom_fonts/font = ExtResource( 11 )
text = "Start"

[node name="AddPlayerButton" type="Button" parent="MainSelection/MainContainer/ButtonsContainer/HBoxContainer2"]
visible = false
margin_top = 98.0
margin_right = 163.0
margin_bottom = 124.0
custom_fonts/font = ExtResource( 4 )
text = "Add Player"

[node name="OptionsButton" type="Button" parent="MainSelection/MainContainer/ButtonsContainer/HBoxContainer2"]
margin_top = 108.0
margin_right = 185.0
margin_bottom = 139.0
focus_neighbour_right = NodePath("../../../../../PlayerSelection/GridContainer/Player1SelectButton")
custom_fonts/font = ExtResource( 11 )
text = "Options"

[node name="ResetGameButton" type="Button" parent="MainSelection/MainContainer/ButtonsContainer/HBoxContainer2"]
margin_top = 162.0
margin_right = 185.0
margin_bottom = 193.0
custom_fonts/font = ExtResource( 11 )
text = "Reset Game"

[node name="QuitToDesktop" type="Button" parent="MainSelection/MainContainer/ButtonsContainer/HBoxContainer2"]
margin_top = 216.0
margin_right = 185.0
margin_bottom = 247.0
focus_neighbour_right = NodePath("../../../../../PlayerSelection/GridContainer/Player1SelectButton")
focus_neighbour_bottom = NodePath("../../../../../GameModeSelection/CheckBox1Competitive")
custom_fonts/font = ExtResource( 11 )
text = "Quit to Desktop"

[node name="GameModeSelection" type="HBoxContainer" parent="."]
margin_left = 117.0
margin_top = 549.0
margin_right = 762.0
margin_bottom = 664.0
custom_constants/separation = 39

[node name="Label" type="Label" parent="GameModeSelection"]
margin_top = 44.0
margin_right = 130.0
margin_bottom = 71.0
custom_fonts/font = ExtResource( 11 )
text = "Game mode"

[node name="CheckBox1Competitive" type="CheckBox" parent="GameModeSelection"]
margin_left = 169.0
margin_right = 320.0
margin_bottom = 115.0
grow_horizontal = 2
grow_vertical = 2
hint_tooltip = "Normal damage. Last player alive wins. AI is active."
focus_neighbour_left = NodePath("../../MainSelection/MainContainer/ButtonsContainer/HBoxContainer2/QuitToDesktop")
focus_neighbour_top = NodePath("../../MainSelection/MainContainer/ButtonsContainer/HBoxContainer2/QuitToDesktop")
focus_neighbour_right = NodePath("../CheckBox2Peaceful")
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 11 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 1 )
text = "Competitive"

[node name="CheckBox2Peaceful" type="CheckBox" parent="GameModeSelection"]
margin_left = 359.0
margin_right = 482.0
margin_bottom = 115.0
grow_horizontal = 2
grow_vertical = 2
hint_tooltip = "No damage. No AI. No end of game."
focus_neighbour_left = NodePath("../CheckBox1Competitive")
focus_neighbour_right = NodePath("../CheckBox3Tough")
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 11 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 2 )
text = "Peaceful"

[node name="CheckBox3Tough" type="CheckBox" parent="GameModeSelection"]
margin_left = 521.0
margin_right = 645.0
margin_bottom = 115.0
grow_horizontal = 2
grow_vertical = 2
hint_tooltip = "Direct one-hit death, no indirect damage. Last player alive wins. AI is active."
focus_neighbour_left = NodePath("../CheckBox2Peaceful")
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 11 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 3 )
text = "Tough"

[node name="PlayerSelection" type="Control" parent="."]
pause_mode = 2
anchor_left = 0.587
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 860.0
margin_top = 212.0
margin_right = 860.0
margin_bottom = 212.0

[node name="GridContainer" type="GridContainer" parent="PlayerSelection"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -41.0
margin_right = 1375.0
margin_bottom = 967.0
grow_vertical = 2
rect_scale = Vector2( 0.7, 0.7 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 20
custom_constants/hseparation = 20
columns = 2

[node name="Player1SelectButton" type="Button" parent="PlayerSelection/GridContainer"]
margin_right = 698.0
margin_bottom = 473.0
focus_neighbour_left = NodePath("../../../MainSelection/MainContainer/ButtonsContainer/HBoxContainer2/QuitToDesktop")
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "Player 1"

[node name="Player2SelectButton" type="Button" parent="PlayerSelection/GridContainer"]
margin_left = 718.0
margin_right = 1416.0
margin_bottom = 473.0
focus_neighbour_left = NodePath("../Player1SelectButton")
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "Player 2"

[node name="Player3SelectButton" type="Button" parent="PlayerSelection/GridContainer"]
margin_top = 493.0
margin_right = 698.0
margin_bottom = 966.0
focus_neighbour_left = NodePath("../Player2SelectButton")
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
disabled = true
text = "Player 3"

[node name="Player4SelectButton" type="Button" parent="PlayerSelection/GridContainer"]
margin_left = 718.0
margin_top = 493.0
margin_right = 1416.0
margin_bottom = 966.0
focus_neighbour_left = NodePath("../Player3SelectButton")
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
disabled = true
text = "Player 4"

[node name="VehicleSelection" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 200.0
margin_top = 300.0
margin_right = 200.0
margin_bottom = 300.0

[node name="GridContainer" type="GridContainer" parent="VehicleSelection"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/hseparation = 30
columns = 4

[node name="RacerButton" type="Button" parent="VehicleSelection/GridContainer"]
margin_right = 357.0
margin_bottom = 480.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "Racer"

[node name="RallyButton" type="Button" parent="VehicleSelection/GridContainer"]
margin_left = 387.0
margin_right = 744.0
margin_bottom = 480.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "Rally"

[node name="TankButton" type="Button" parent="VehicleSelection/GridContainer"]
margin_left = 774.0
margin_right = 1131.0
margin_bottom = 480.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "Tank"

[node name="TruckButton" type="Button" parent="VehicleSelection/GridContainer"]
margin_left = 1161.0
margin_right = 1518.0
margin_bottom = 480.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "Truck"

[node name="OptionMenu" type="Control" parent="."]
anchor_left = 0.124
anchor_top = 0.116
anchor_right = 0.349
anchor_bottom = 0.527
margin_left = 358.0
margin_top = 205.0
margin_right = 358.0
margin_bottom = 205.0

[node name="GridContainer" type="GridContainer" parent="OptionMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 32.0
margin_right = 409.0
margin_bottom = 283.0
custom_constants/vseparation = 27
custom_constants/hseparation = 30

[node name="MusicVolume" type="GridContainer" parent="OptionMenu/GridContainer"]
margin_right = 409.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="MusicVolumeText" type="Label" parent="OptionMenu/GridContainer/MusicVolume"]
margin_right = 202.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 11 )
text = "Music Volume"
valign = 1

[node name="MusicVolume" type="HSlider" parent="OptionMenu/GridContainer/MusicVolume"]
margin_left = 206.0
margin_right = 408.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -24.0
max_value = 0.0
script = ExtResource( 7 )

[node name="VehicleVolume" type="GridContainer" parent="OptionMenu/GridContainer"]
margin_top = 54.0
margin_right = 409.0
margin_bottom = 81.0
columns = 2

[node name="VehicleVolumeText" type="Label" parent="OptionMenu/GridContainer/VehicleVolume"]
margin_right = 202.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 11 )
text = "Vehicle  Volume"
valign = 1

[node name="VehicleVolume" type="HSlider" parent="OptionMenu/GridContainer/VehicleVolume"]
margin_left = 206.0
margin_right = 408.0
margin_bottom = 27.0
focus_previous = NodePath("../../MusicVolume/MusicVolume")
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -24.0
max_value = 0.0
script = ExtResource( 8 )

[node name="WindSpeed" type="GridContainer" parent="OptionMenu/GridContainer"]
margin_top = 108.0
margin_right = 409.0
margin_bottom = 135.0
columns = 2

[node name="WindSpeedText" type="Label" parent="OptionMenu/GridContainer/WindSpeed"]
margin_right = 202.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 11 )
text = "Wind Speed"
valign = 1

[node name="WindSpeed" type="HSlider" parent="OptionMenu/GridContainer/WindSpeed"]
margin_left = 206.0
margin_right = 408.0
margin_bottom = 27.0
focus_previous = NodePath("../../VehicleVolume/VehicleVolume")
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 2000.0
step = 10.0
value = 500.0
script = ExtResource( 9 )

[node name="Option1Button" type="Button" parent="OptionMenu/GridContainer"]
visible = false
margin_top = 50.0
margin_right = 192.0
margin_bottom = 76.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 10 )
custom_fonts/font = ExtResource( 4 )
disabled = true
text = "Option1"

[node name="Option2Button" type="Button" parent="OptionMenu/GridContainer"]
visible = false
margin_top = 50.0
margin_right = 192.0
margin_bottom = 78.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
disabled = true
text = "Option 2"

[node name="Option3Button" type="Button" parent="OptionMenu/GridContainer"]
visible = false
margin_top = 50.0
margin_right = 192.0
margin_bottom = 87.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
disabled = true
text = "Option 3"

[node name="Option4Button" type="Button" parent="OptionMenu/GridContainer"]
visible = false
margin_top = 50.0
margin_right = 192.0
margin_bottom = 106.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
disabled = true
text = "Option 4"

[node name="OptionBackButton" type="Button" parent="OptionMenu/GridContainer"]
margin_top = 162.0
margin_right = 84.0
margin_bottom = 193.0
focus_previous = NodePath("../WindSpeed/WindSpeed")
size_flags_horizontal = 0
custom_fonts/font = ExtResource( 11 )
text = "[Back]"

[node name="VersionText" type="Control" parent="."]
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VersionContainer" type="VBoxContainer" parent="VersionText"]
anchor_right = 1.0
margin_top = 1004.0
margin_right = 1920.0
margin_bottom = 1059.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="VersionText" type="Label" parent="VersionText/VersionContainer"]
margin_right = 1920.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 11 )
text = "Explosional BETA v0.0.1 Build x 2022 McAwl"
align = 1
valign = 1

[node name="LoadingText" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 562.0
margin_top = 557.0
margin_right = 1326.0
margin_bottom = 619.0
custom_fonts/font = ExtResource( 11 )
text = "Loading terrain..."
align = 1
valign = 1

[connection signal="button_up" from="MainSelection/MainContainer/ButtonsContainer/HBoxContainer2/ResumeButton" to="." method="_on_ResumeButton_button_up"]
[connection signal="button_down" from="MainSelection/MainContainer/ButtonsContainer/HBoxContainer2/StartButton" to="." method="_on_StartButton_button_down"]
[connection signal="button_up" from="MainSelection/MainContainer/ButtonsContainer/HBoxContainer2/AddPlayerButton" to="." method="_on_AddPlayerButton_button_up"]
[connection signal="button_up" from="MainSelection/MainContainer/ButtonsContainer/HBoxContainer2/OptionsButton" to="." method="_on_OptionsButton_button_up"]
[connection signal="button_up" from="MainSelection/MainContainer/ButtonsContainer/HBoxContainer2/ResetGameButton" to="." method="_on_ResetGameButton_button_up"]
[connection signal="button_up" from="MainSelection/MainContainer/ButtonsContainer/HBoxContainer2/QuitToDesktop" to="." method="_on_QuitToDesktop_button_up"]
[connection signal="button_up" from="GameModeSelection/CheckBox1Competitive" to="." method="_on_CheckBox1Competitive_button_up"]
[connection signal="button_up" from="GameModeSelection/CheckBox2Peaceful" to="." method="_on_CheckBox2Peaceful_button_up"]
[connection signal="button_up" from="GameModeSelection/CheckBox3Tough" to="." method="_on_CheckBox3Tough_button_up"]
[connection signal="button_up" from="PlayerSelection/GridContainer/Player1SelectButton" to="." method="_on_Player1SelectButton_button_up"]
[connection signal="button_up" from="PlayerSelection/GridContainer/Player2SelectButton" to="." method="_on_Player2SelectButton_button_up"]
[connection signal="button_up" from="PlayerSelection/GridContainer/Player3SelectButton" to="." method="_on_Player3SelectButton_button_up"]
[connection signal="button_up" from="PlayerSelection/GridContainer/Player4SelectButton" to="." method="_on_Player4SelectButton_button_up"]
[connection signal="button_up" from="VehicleSelection/GridContainer/RacerButton" to="." method="_on_RacerButton_button_up"]
[connection signal="button_up" from="VehicleSelection/GridContainer/RallyButton" to="." method="_on_RallyButton_button_up"]
[connection signal="button_up" from="VehicleSelection/GridContainer/TankButton" to="." method="_on_TankButton_button_up"]
[connection signal="button_up" from="VehicleSelection/GridContainer/TruckButton" to="." method="_on_TruckButton_button_up"]
[connection signal="value_changed" from="OptionMenu/GridContainer/MusicVolume/MusicVolume" to="." method="_on_MusicVolume_value_changed"]
[connection signal="value_changed" from="OptionMenu/GridContainer/VehicleVolume/VehicleVolume" to="." method="_on_VehicleVolume_value_changed"]
[connection signal="value_changed" from="OptionMenu/GridContainer/WindSpeed/WindSpeed" to="." method="_on_WindSpeed_value_changed"]
[connection signal="button_up" from="OptionMenu/GridContainer/OptionBackButton" to="." method="_on_OptionBackButton_button_up"]
